Uploaded image for project: 'Qt'
  1. Qt
  2. QTBUG-107076

Copying image data from Qt aplications is still broken on GNOME Wayland

    XMLWordPrintable

Details

    • Linux/Wayland
    • 5025ac1508 (qt/qtwayland/dev) 4ee03c3978 (qt/qtwayland/6.4) 4ee03c3978 (qt/tqtc-qtwayland/6.4) 4ee03c3978 (qt/tqtc-qtwayland/6.4.1) fdfe926252 (qt/tqtc-qtwayland/6.2) 4cc3ce4a20 (qt/tqtc-qtwayland/5.15) fdfe926252 (qt/tqtc-qtwayland/6.2.7)

    Description

      I've checked only copying from Qt application running 6.4.0, but won't be surprised if that's something that always has been, but wasn't tested due to XWayland being the default.

      When using QGuiApplication::clipboard()->setImage() on GNOME Wayland, it pastes broken to any application. I've tried:
      1. Pasting to release version of GIMP running through XWayland - it pastes around first 15% of the image, the remaining content is grey color
      2. Pasting to beta version of GIMP from flathub-beta running natively on Wayland - the same
      3. Pasting to a Qt 5.15 application running natively on Wayland - pastes almost black color, but it seems there's some content at the end of the image

      Personally I tested on mutter running nested on Plasma Wayland (Plasma itself doesn't show such behavior), but it was reported to me by a person using GNOME Wayland on Ubuntu 22.04

      That's how it looks like (downstream reporter's screenshot):

      Attachments

        No reviews matched the request. Check your Options in the drop-down menu of this sections header.

        Activity

          People

            inho Inho Lee
            ilya-fedin Ilya Fedin
            Votes:
            0 Vote for this issue
            Watchers:
            5 Start watching this issue

            Dates

              Created:
              Updated:
              Resolved:

              Gerrit Reviews

                There are no open Gerrit changes