Always use blocking write for data_source.send

QtWaylandClient assumes that data_source's fd is BLOCKING,
but some compositors (e.g. mutter) pass an fd with
O_NONBLOCK set. In this case, 'write' is not guaranteed to
process all of the passed data in one call. Instead of
dealing with such partial writes, remove O_NONBLOCK.

Fixes: QTBUG-107076
Change-Id: Ieb446da9fdfbaaa55100f573b396ee449cadc463
Reviewed-by: Eskil Abrahamsen Blomfeldt <eskil.abrahamsen-blomfeldt@qt.io>
(cherry picked from commit 5025ac15088d1b85007b3d3439c14bdc3e4979a1)
Reviewed-by: Qt Cherry-pick Bot <cherrypick_bot@qt-project.org>