src/client/qwaylanddatasource.cpp
@@ -13,6 +13,7 @@
 
 #include <unistd.h>
 #include <signal.h>
+#include <fcntl.h>
 
 QT_BEGIN_NAMESPACE
 
@@ -57,6 +58,13 @@ void QWaylandDataSource::data_source_send(const QString &mime_type, int32_t fd)
         action.sa_flags = 0;
 
         sigaction(SIGPIPE, &action, &oldAction);
+        // Some compositors (e.g., mutter) make fd with O_NONBLOCK.
+        // Since wl_data_source.send describes that fd is closed here,
+        // it should be done in a loop and don't have any advantage.
+        // Blocking operation will be used.
+        // According to fcntl(2), FSETFL ignores O_WRONLY. So this
+        // call will just remove O_NONBLOCK.
+        fcntl(fd, F_SETFL, O_WRONLY);
         ssize_t unused = write(fd, content.constData(), content.size());
         Q_UNUSED(unused);
         sigaction(SIGPIPE, &oldAction, nullptr);
